border fix, header spacing

--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -158,7 +158,6 @@ html {
         font-size: 0.5rem;
     }
     .about-content{
-        border: 2px solid red;
         width: 80%;
         margin-left: 25%;
         padding-left: 1rem;
