--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -43,6 +43,6 @@
     font-size: 0.7rem;
   }
   .header-list {
-    top: 20px;
+    top: 15px;
   }
 }
